// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`ChatDisplay should display a progress bar while sending 1`] = `
<WithStyles(ForwardRef(Container))
  style={
    Object {
      "boxSizing": "border-box",
      "height": "100%",
      "padding": "1rem",
    }
  }
>
  <Styled(MuiBox)
    style={
      Object {
        "height": "5%",
      }
    }
  >
    <Alert
      status="sending"
    />
    <WithStyles(ForwardRef(LinearProgress)) />
  </Styled(MuiBox)>
  <Styled(MuiBox)
    style={
      Object {
        "height": "70%",
        "overflow": "auto",
      }
    }
  >
    <ChatMessages
      conversationId="conversation id"
      conversationSeen={[MockFunction]}
      messages="conversation messages"
    />
  </Styled(MuiBox)>
  <Styled(MuiBox)
    style={
      Object {
        "height": "20%",
      }
    }
  >
    <Connect(ChatInputDisplay)
      conversationId="conversation id"
    />
  </Styled(MuiBox)>
</WithStyles(ForwardRef(Container))>
`;

exports[`ChatDisplay should display the chat 1`] = `
<WithStyles(ForwardRef(Container))
  style={
    Object {
      "boxSizing": "border-box",
      "height": "100%",
      "padding": "1rem",
    }
  }
>
  <Styled(MuiBox)
    style={
      Object {
        "height": "5%",
      }
    }
  >
    <Alert
      status="conversation status"
    />
  </Styled(MuiBox)>
  <Styled(MuiBox)
    style={
      Object {
        "height": "70%",
        "overflow": "auto",
      }
    }
  >
    <ChatMessages
      conversationId="conversation id"
      conversationSeen={[MockFunction]}
      messages="conversation messages"
    />
  </Styled(MuiBox)>
  <Styled(MuiBox)
    style={
      Object {
        "height": "20%",
      }
    }
  >
    <Connect(ChatInputDisplay)
      conversationId="conversation id"
    />
  </Styled(MuiBox)>
</WithStyles(ForwardRef(Container))>
`;

exports[`ChatDisplay should return null if conversation has not been provided 1`] = `""`;

exports[`ChatDisplay should return null if conversationId has not been provided 1`] = `""`;
